basic Login API

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-MONGO_URL = 'mongodb+srv://cotton:P1pDIxvN6fC06VNy@event-blog.ciepom3.mongodb.net/?appName=event-blog'
+MONGO_URL = 'mongodb+srv://cotton:1234@event-blog.ciepom3.mongodb.net/?appName=event-blog'
+
+db_name = 'event_hub'
