--- a/backend/.air.toml
+++ b/backend/.air.toml
@@ -6,9 +6,10 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/main.exe"
-  cmd = "go build -o ./main"
+  bin = "./tmp/main"
+  cmd = "go build -o ./tmp/main ."
   delay = 1000
+  entrypoint = ["./tmp/main"]
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
   exclude_regex = ["_test.go"]
